# BIA_Insurance_prediction_project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 1_EDA.ipynb  2_cleaning_&_transformation.ipynb  3_training.ipynb
reference books/: Copy_of_HEALTH_INSURANCE_CROSS_SELL_PREDICTION.ipynb  Optimization_by_PYCARET.ipynb
